Agregado enlace a whatsapp

--- a/contacto.html
+++ b/contacto.html
@@ -64,7 +64,7 @@
         <input type="submit" id="button" value="Enviar Formulario" class="enviar" />
         <div class="whatsapp">
           <img class="icono-whatsapp" width="150" height="150" src="./imagenes/Whatsapp.png" alt="Icono de whatsapp" />
-          <p class="telefono-whatsapp">351 852-4287</p>
+          <a class="telefono-whatsapp" href="https://api.whatsapp.com/send?phone=543518524287" target="_blank">351 852-4287</a>
         </div>
       </form>
     </main>
