Agregado estilos enlace Whatsapp

--- a/contacto.html
+++ b/contacto.html
@@ -63,8 +63,12 @@
         <input type="text" id="message" name="message" class="input-textarea" required></input>
         <input type="submit" id="button" value="Enviar Formulario" class="enviar" />
         <div class="whatsapp">
-          <img class="icono-whatsapp" width="150" height="150" src="./imagenes/Whatsapp.png" alt="Icono de whatsapp" />
-          <a class="telefono-whatsapp" href="https://api.whatsapp.com/send?phone=543518524287" target="_blank">351 852-4287</a>
+          <img class="icono-whatsapp" width="250" height="150" src="./imagenes/Whatsapp.png" alt="Icono de whatsapp" />
+          <a class="telefono-whatsapp" href="https://api.whatsapp.com/send?phone=543518524287" target="_blank">
+            <p class="boton-whatsapp" style="background-color: green; color: white; ">
+              <i class="fab fa-whatsapp"></i> Contáctame por WhatsApp
+            </p>
+          </a>
         </div>
       </form>
     </main>
