--- a/index.html
+++ b/index.html
@@ -210,6 +210,31 @@
             ></iframe>
           </div>
         </div>
+        <div class="whatsapp">
+          <div>
+            <img
+              class="icono-whatsapp"
+              width="250"
+              height="150"
+              src="./imagenes/Whatsapp.png"
+              alt="Icono de whatsapp"
+            />
+          </div>
+          <div>
+            <a
+              class="telefono-whatsapp"
+              href="https://api.whatsapp.com/send?phone=543518524287"
+              target="_blank"
+            >
+              <p
+                class="boton-whatsapp-index"
+                style="background-color: green; color: white"
+              >
+                <i class="fab fa-whatsapp"></i> Contáctame por WhatsApp
+              </p>
+            </a>
+          </div>
+        </div>
       </section>
     </main>
 
