--- a/productos.html
+++ b/productos.html
@@ -199,6 +199,27 @@
           />
         </div>
       </div>
+      <div class="whatsapp">
+        <img
+          class="icono-whatsapp"
+          width="250"
+          height="150"
+          src="./imagenes/Whatsapp.png"
+          alt="Icono de whatsapp"
+        />
+        <a
+          class="telefono-whatsapp"
+          href="https://api.whatsapp.com/send?phone=543518524287"
+          target="_blank"
+        >
+          <p
+            class="boton-whatsapp"
+            style="background-color: green; color: white"
+          >
+            <i class="fab fa-whatsapp"></i> Contáctame por WhatsApp
+          </p>
+        </a>
+      </div>
     </main>
 
     <footer>
