Agregado sombra a boton whatsapp y cambio de nombre Pantuflones

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </table>
           </div>
           <div class="tabla_precios">
-            <h4>Pantuflas</h4>
+            <h4>Pantuflones</h4>
             <table class="table">
               <thead>
                 <tr>
