--- a/productos.html
+++ b/productos.html
@@ -130,7 +130,7 @@
         </ul>
       </div>
       <div>
-        <h3 class="titulo-productos">Pantuflas</h3>
+        <h3 class="titulo-productos">Pantuflones</h3>
         <ul class="productos">
           <li>
             <img src="imagenes/Pantuflas/1.png" />
