Eliminado todo lo relacionado a pantuflas y cambio de precios en pijamas

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <ul>
         <li><img class="imagen" src="imagenes/banner_4.png" /></li>
         <li>
-          <img class="imagen" src="imagenes/Pantuflas/banner_pantuflas.png" />
+          <img class="imagen" src="imagenes/banner_1.png" />
         </li>
         <li><img class="imagen" src="imagenes/banner_2.png" /></li>
         <li><img class="imagen" src="imagenes/banner_3.png" /></li>
@@ -59,7 +59,7 @@
           pijama de calidad y disfruta de un merecido descanso.
         </p>
       </section>
-      <section class="principal">
+      <!-- <section class="principal">
         <img
           class="utensillos"
           src="./imagenes/Pantuflas/14.jpg"
@@ -74,7 +74,7 @@
           invierte en un par de pantuflas de calidad y disfruta de la comodidad
           en casa.
         </p>
-      </section>
+      </section> -->
       <section class="talles_precios">
         <h3 class="titulo-talles">Talles y Precios</h3>
         <div class="talles">
@@ -102,20 +102,20 @@
               <tbody>
                 <tr>
                   <td>Niños</td>
-                  <td>$3300</td>
+                  <td>$4300</td>
                 </tr>
                 <tr>
                   <td>S y M</td>
-                  <td>$4100</td>
+                  <td>$5100</td>
                 </tr>
                 <tr>
                   <td>L y XL</td>
-                  <td>$5000</td>
+                  <td>$6000</td>
                 </tr>
               </tbody>
             </table>
           </div>
-          <div class="tabla_precios">
+          <!-- <div class="tabla_precios">
             <h4>Pantuflones</h4>
             <table class="table">
               <thead>
@@ -140,7 +140,7 @@
               </tbody>
             </table>
           </div>
-        </div>
+        </div> -->
       </section>
 
       <section class="diferenciales">
