Agregada seccion de pijamas cortos, tabla de precios, talles y fotos

--- a/productos.html
+++ b/productos.html
@@ -26,7 +26,7 @@
 
     <main class="contenedor-productos">
       <div>
-        <h3 class="titulo-productos">Pijamas</h3>
+        <h3 class="titulo-productos">Pijamas Largos</h3>
         <ul class="productos">
           <li>
             <img src="imagenes/13.png" />
@@ -130,75 +130,109 @@
         </ul>
       </div>
       <div>
-        <!-- <h3 class="titulo-productos">Pantuflones</h3>
+        <h3 class="titulo-productos">Pijamas Cortos</h3>
         <ul class="productos">
           <li>
-            <img src="imagenes/Pantuflas/1.png" />
+            <img src="imagenes/Pijamas Cortos/Cactus.png" />
           </li>
           <li>
-            <img src="imagenes/Pantuflas/2.png" />
+            <img src="imagenes/Pijamas Cortos/Cruella.png" />
           </li>
           <li>
-            <img src="imagenes/Pantuflas/3.png" />
+            <img src="imagenes/Pijamas Cortos/Disney.png" />
           </li>
           <li>
-            <img src="imagenes/Pantuflas/4.png" />
+            <img src="imagenes/Pijamas Cortos/Dragon_Ball.png" />
           </li>
           <li>
-            <img src="imagenes/Pantuflas/5.png" />
+            <img src="imagenes/Pijamas Cortos/Fortnite.png" />
           </li>
           <li>
-            <img src="imagenes/Pantuflas/6.png" />
+            <img src="imagenes/Pijamas Cortos/Friends.png" />
           </li>
           <li>
-            <img src="imagenes/Pantuflas/7.png" />
+            <img src="imagenes/Pijamas Cortos/Garfield.png" />
           </li>
           <li>
-            <img src="imagenes/Pantuflas/8.png" />
+            <img src="imagenes/Pijamas Cortos/Lilo_y_Stitch.png" />
           </li>
           <li>
-            <img src="imagenes/Pantuflas/9.png" />
+            <img src="imagenes/Pijamas Cortos/Mario.png" />
           </li>
           <li>
-            <img src="imagenes/Pantuflas/10.png" />
+            <img src="imagenes/Pijamas Cortos/Mickey.png" />
           </li>
           <li>
-            <img src="imagenes/Pantuflas/11.png" />
+            <img src="imagenes/Pijamas Cortos/Minnie.png" />
           </li>
           <li>
-            <img src="imagenes/Pantuflas/12.png" />
+            <img src="imagenes/Pijamas Cortos/Minnie_1.png" />
           </li>
           <li>
-            <img src="imagenes/Pantuflas/13.png" />
+            <img src="imagenes/Pijamas Cortos/Mix.png" />
           </li>
           <li>
-            <img src="imagenes/Pantuflas/14.jpg" />
+            <img src="imagenes/Pijamas Cortos/Mix_1.png" />
           </li>
           <li>
-            <img src="imagenes/Pantuflas/16.png" />
+            <img src="imagenes/Pijamas Cortos/Mix_2.png" />
           </li>
           <li>
-            <img src="imagenes/Pantuflas/17.png" />
+            <img src="imagenes/Pijamas Cortos/Mujer_Maravilla.png" />
           </li>
           <li>
-            <img src="imagenes/Pantuflas/18.png" />
+            <img src="imagenes/Pijamas Cortos/Mujer_Maravilla_1.png" />
           </li>
           <li>
-            <img src="imagenes/Pantuflas/19.png" />
+            <img src="imagenes/Pijamas Cortos/Mujer_Maravilla_2.png" />
           </li>
           <li>
-            <img src="imagenes/Pantuflas/20.png" />
+            <img src="imagenes/Pijamas Cortos/Naruto.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pijamas Cortos/Netflix.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pijamas Cortos/Palta.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pijamas Cortos/Paw_Patrol.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pijamas Cortos/Simpsons.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pijamas Cortos/Simpsons_1.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pijamas Cortos/Simpsons_2.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pijamas Cortos/Simpsons_3.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pijamas Cortos/Simpsons_4.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pijamas Cortos/Snoopy.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pijamas Cortos/Spiderman.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pijamas Cortos/Stitch.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pijamas Cortos/Strangers_Things.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pijamas Cortos/Tik_Tok.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pijamas Cortos/Unicornio.png" />
           </li>
         </ul>
-        <h3 class="titulo-productos">Recomendaciones</h3>
-        <div class="recomendaciones">
-          <img
-            class="imagen-recomendaciones"
-            src="./imagenes/Pantuflas/15.png"
-            alt="Imagenes con recomendaciones"
-          />
-        </div>
-      </div> -->
+      </div>
       <div class="whatsapp">
         <img
           class="icono-whatsapp"
