--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
           ideales para pasar un día cómodo en casa. Así que invierte en un
           pijama de calidad y disfruta de un merecido descanso.
         </p>
+        <p class="diseño">
+          PODES ELEGIR CUALQUIER DISEÑO PARA PIJAMA CORTO O LARGO!!!
+        </p>
       </section>
       <!-- <section class="principal">
         <img
@@ -88,10 +91,15 @@
             src="./imagenes/talles_adultos.jpg"
             alt="Talles Adultos"
           />
+          <img
+            class="foto_talles"
+            src="./imagenes/Pijamas Cortos/Talles.jpeg"
+            alt="Talles Niños"
+          />
         </div>
         <div class="tablas">
           <div class="tabla_precios">
-            <h4>Pijamas</h4>
+            <h4>Pijamas Largos</h4>
             <table class="table">
               <thead>
                 <tr>
@@ -115,32 +123,32 @@
               </tbody>
             </table>
           </div>
-          <!-- <div class="tabla_precios">
-            <h4>Pantuflones</h4>
+          <div class="tabla_precios">
+            <h4>Pijamas Cortos</h4>
             <table class="table">
               <thead>
                 <tr>
-                  <th>Talle&nbsp&nbsp&nbsp&nbsp</th>
+                  <th>Talle&nbsp&nbsp</th>
                   <th>Precio</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
-                  <td>35/36/37</td>
-                  <td>$5000</td>
+                  <td>Niños</td>
+                  <td>$3900</td>
                 </tr>
                 <tr>
-                  <td>38/39/40</td>
-                  <td>$5000</td>
+                  <td>S y M</td>
+                  <td>$4700</td>
                 </tr>
                 <tr>
-                  <td>Ancho</td>
-                  <td>14/16cm</td>
+                  <td>L y XL</td>
+                  <td>$5600</td>
                 </tr>
               </tbody>
             </table>
           </div>
-        </div> -->
+        </div>
       </section>
 
       <section class="diferenciales">
