Agregadas fotos de pijamas

--- a/index.html
+++ b/index.html
@@ -58,9 +58,11 @@
           ideales para pasar un día cómodo en casa. Así que invierte en un
           pijama de calidad y disfruta de un merecido descanso.
         </p>
-        <p class="diseño">
-          PODES ELEGIR CUALQUIER DISEÑO PARA PIJAMA CORTO O LARGO!!!
-        </p>
+        <div class="diseño">
+          <p class="diseño">
+            PODES ELEGIR CUALQUIER DISEÑO EN PIJAMA CORTO O LARGO!!!
+          </p>
+        </div>
       </section>
       <!-- <section class="principal">
         <img
