--- a/productos.html
+++ b/productos.html
@@ -29,6 +29,18 @@
         <h3 class="titulo-productos">Pijamas Largos</h3>
         <ul class="productos">
           <li>
+            <img src="imagenes/Merlina.png" />
+          </li>
+          <li>
+            <img src="imagenes/Barbie.png" />
+          </li>
+          <li>
+            <img src="imagenes/La_Sirenita.png" />
+          </li>
+          <li>
+            <img src="imagenes/Zenon.png" />
+          </li>
+          <li>
             <img src="imagenes/13.png" />
           </li>
           <li>
