Agregada seccion de ofertas, agregado ofertas al nav y cambio de imagenes en el banner

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           <ul class="menu">
             <li><a href="index.html">Home</a></li>
             <li><a href="productos.html">Catálogo</a></li>
+            <li><a href="ofertas.html">Ofertas</a></li>
             <li><a href="contacto.html">Contacto</a></li>
           </ul>
         </nav>
@@ -34,11 +35,11 @@
 
     <div class="slider-frame">
       <ul>
-        <li><img class="imagen" src="imagenes/banner_4.png" /></li>
+        <li><img class="imagen" src="imagenes/Banner_Nuevo_3.png" /></li>
         <li>
-          <img class="imagen" src="imagenes/banner_1.png" />
+          <img class="imagen" src="imagenes/Banner_Nuevo_1.png" />
         </li>
-        <li><img class="imagen" src="imagenes/banner_2.png" /></li>
+        <li><img class="imagen" src="imagenes/Banner_Nuevo_2.png" /></li>
         <li><img class="imagen" src="imagenes/banner_3.png" /></li>
       </ul>
     </div>
