--- a/contacto.html
+++ b/contacto.html
@@ -29,6 +29,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="productos.html">Catálogo</a></li>
+            <li><a href="ofertas.html">Ofertas</a></li>
             <li><a href="contacto.html">Contacto</a></li>
           </ul>
         </nav>
